fixing pricing spacing

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -5883,7 +5883,7 @@ h2 {
     color: #fff; }
 
 .section--pricing {
-  height: 1075px;
+  height: 1135px;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: 20px;
