--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -31,7 +31,7 @@ h2 {
   @media (max-width: 320px) {
     height: 2870px;
   }
-  height: 1075px;
+  height: 1135px;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: 20px;
